Fix overflow on license page

--- a/app/assets/stylesheets/licenses.scss
+++ b/app/assets/stylesheets/licenses.scss
@@ -17,7 +17,6 @@
   .license-agreement {
     background-color: $white;
     border: 1px solid $border-shadow;
-    max-height: 80vh;
     padding: 2em;
   }
 
